--- a/browser-organ-example/index.html
+++ b/browser-organ-example/index.html
@@ -45,7 +45,7 @@
 
 
 </head>
-<body ng-app="spinalApp" ng-controller="mainController as main">
+<body ng-app="spinalApp" ng-controller="TutoCtrl as main">
   <navbar></navbar>
   <div ng-view></div>
 </body>
