Fix bugs in example

--- a/browser-organ-example/index.html
+++ b/browser-organ-example/index.html
@@ -43,6 +43,11 @@
   <!-- config -->
   <script type="text/javascript" src="app/app.config.js"></script>
 
+  <style>
+    body {
+      padding-top: 60px;
+    }
+  </style>
 
 </head>
 <body ng-app="spinalApp" ng-controller="TutoCtrl as main">
